--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,13 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'http:////build00:8081/nexus/content/repositories/snapshots/'
+        }
+        maven {
+            url 'http:////build00:8081/nexus/content/repositories/thirdparty/'
+        }
+        mavenLocal()
     }
 }
 
