--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,7 +74,7 @@
             </intent-filter>
 		</receiver>
 
-        <activity android:name=".AuthActivity" android:label="@string/app_name">
+        <activity android:name="com.mobbu.passwear.api.ui.PasswearActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -85,6 +85,7 @@
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW"/>
 				<action android:name="android.intent.action.PICK"/>
+                <action android:name="com.mobbu.passwear.COMPLETE"/>
 				<category android:name="android.intent.category.DEFAULT"/>
 				<data android:mimeType="vnd.android.cursor.dir/org.andstatus.app.provider.msg"/>
 			</intent-filter>
