--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,10 +82,13 @@
         </activity>
 		<activity android:name=".msg.TimelineActivity" android:label="@string/app_name" 
 		    android:launchMode="singleTask" android:windowSoftInputMode="adjustResize">
-			<intent-filter>
-				<action android:name="android.intent.action.VIEW"/>
-				<action android:name="android.intent.action.PICK"/>
+            <intent-filter>
                 <action android:name="com.mobbu.passwear.COMPLETE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.PICK"/>
 				<category android:name="android.intent.category.DEFAULT"/>
 				<data android:mimeType="vnd.android.cursor.dir/org.andstatus.app.provider.msg"/>
 			</intent-filter>
