--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,7 +74,7 @@
             </intent-filter>
 		</receiver>
 
-        <activity android:name="com.mobbu.passwear.api.ui.PasswearActivity" android:label="@string/app_name">
+        <activity android:name="com.mobbu.passwear.sdk.ui.PasswearActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
