--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     compile files('libs/signpost-commonshttp4-1.2.1.2.jar')
     compile files('libs/signpost-core-1.2.1.2.jar')
 
-    compile 'com.mobbu.passwear:sdk:1.0-SNAPSHOT'
-    compile 'com.mobbu.passwear:core:1.0-SNAPSHOT'
+    compile(name:'passwear-core-1.0.0-alpha', ext:'aar')
+    compile(name:'passwear-sdk-1.0.0-alpha', ext:'aar')
+//    compile 'com.mobbu.passwear:passwear-core:1.0.0-alpha'
+//    compile 'com.mobbu.passwear:passwear-sdk:1.0.0-alpha'
+
 }
