--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,9 +56,10 @@ dependencies {
     compile files('libs/signpost-commonshttp4-1.2.1.2.jar')
     compile files('libs/signpost-core-1.2.1.2.jar')
 
-    compile(name:'passwear-core-1.0.0-alpha', ext:'aar')
-    compile(name:'passwear-sdk-1.0.0-alpha', ext:'aar')
-//    compile 'com.mobbu.passwear:passwear-core:1.0.0-alpha'
-//    compile 'com.mobbu.passwear:passwear-sdk:1.0.0-alpha'
-
+    compile (name:'passwear-sdk-1.0.0-SNAPSHOT', ext:'aar')
+    compile 'com.google.guava:guava:18.0'
+    compile ('org.simpleframework:simple-xml:2.7.1') {
+        exclude group: 'stax', module: 'stax-api'
+        exclude group: 'xpp3', module: 'xpp3'
+    }
 }
