--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,11 +16,25 @@ android {
         project.ext.set("archivesBaseName", "AndStatus-$versionName");
     }
 
+    signingConfigs {
+        release {
+            if (project.hasProperty('RELEASE_STORE_FILE')) {
+                storeFile file(RELEASE_STORE_FILE)
+                storePassword RELEASE_STORE_PASSWORD
+                keyAlias RELEASE_KEY_ALIAS
+                keyPassword RELEASE_KEY_PASSWORD
+            }
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             lintOptions {
                 disable 'MissingTranslation'
+            }
+            if (project.hasProperty('MOBBU_KEYSTORE')) {
+                signingConfig signingConfigs.release
             }
         }
     }
