--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ allprojects {
             url 'http:////build00:8081/nexus/content/repositories/thirdparty/'
         }
         mavenLocal()
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
